# jka_demo_parser_lib

./: .gitignore  CMakeLists.txt  README.md
examples/: dump_info.cpp  dump_json.cpp
include/jka/: Huffman.h  TrajectoryEvaluator.hpp  Vec3.hpp  defs.h  demo.h  demo.hpp  entitystate.hpp  entitystate_adapter.hpp  entitystate_instr.h  entitystate_instr.hpp  huffman.hpp  huffman_stream.hpp  instruction.h  jka_demo_parser.hpp  message.h  message.hpp  messagebuffer.h  messagebuffer.hpp  netfields.h  netfields.hpp  playerstate.hpp  playerstate_adapter.hpp  playerstate_instr.h  qcommon.h  qcommon.hpp  snapshot.hpp  snapshot_adapter.hpp  snapshot_converter.hpp  snapshot_instr.h  snapshot_parser.hpp  state.h  state.hpp  trajectory.hpp  trajectory_types.hpp  usercmd.hpp  usercmd_adapter.hpp  usercmd_baseline.hpp  usercmd_instr.hpp
scripts/: clean_env.sh
src/: demo.cc  huffman.cc  huffman.cpp  huffman_stream.cpp  instruction.cc  message.cc  messagebuffer.cc  state.cc
tests/: compile_test.cpp
